--- a/index.html
+++ b/index.html
@@ -36,25 +36,23 @@
       background: #f9f9f9;
       border: 2px solid #000;
     }
-    .v-symbol {
-      border-color: red;
-      color: white;
-      background-color: red;
+    .v-symbol, .c-symbol {
       border-radius: 50%;
       width: 40px;
       height: 40px;
       text-align: center;
-      line-height: 20px;
+      line-height: 40px;
+      font-size: 1.2em;
+    }
+    .v-symbol {
+      border-color: red;
+      color: white;
+      background-color: red;
     }
     .c-symbol {
       border-color: green;
       color: white;
       background-color: green;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      text-align: center;
-      line-height: 20px;
     }
     .symbol-container {
       margin-top: 10px;
@@ -105,6 +103,7 @@
       overflow: hidden;
       height: 40px;
       cursor: ew-resize;
+      min-width: 30px;
     }
   </style>
 </head>
@@ -148,15 +147,19 @@
       const display = document.getElementById("word-display");
       const rect = display.getBoundingClientRect();
       symbol.style.position = 'absolute';
-      symbol.style.left = `${event.clientX - rect.left - 20}px`;
-      symbol.style.top = `${event.clientY - rect.top - 20}px`;
+      const x = event.clientX - rect.left;
+      const y = event.clientY - rect.top;
+      symbol.style.left = `${x - symbol.offsetWidth / 2}px`;
+      symbol.style.top = `${y - symbol.offsetHeight / 2}px`;
       symbol.style.cursor = 'move';
       symbol.onmousedown = dragMove;
+
       if (symbol.classList.contains('multi-letter-wrapper')) {
         symbol.style.resize = 'horizontal';
         symbol.style.height = '40px';
         symbol.style.minWidth = '30px';
       }
+
       display.appendChild(symbol);
       dragSymbol = null;
     }
