--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Syllable Mapper</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Fredoka', sans-serif;
-      margin: 20px;
+      padding: 20px;
     }
+
     #word-input {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       font-size: 1.2em;
       padding: 5px;
     }
+
     .letter-container {
       display: inline-block;
       text-align: center;
@@ -22,57 +24,70 @@
       width: 60px;
       position: relative;
     }
+
     .letter-display {
-      font-size: 2em;
-      margin: 20px 0;
+      font-size: 2.5em;
+      position: relative;
+      z-index: 1;
     }
+
+    .symbol-container {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    #symbols {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      max-width: 600px;
+    }
+
     .draggable {
-      display: inline-block;
-      margin: 5px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       padding: 10px;
       font-weight: bold;
       cursor: grab;
-      user-select: none;
       background: #f9f9f9;
       border: 2px solid #000;
+      user-select: none;
     }
-    .v-symbol, .c-symbol {
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      text-align: center;
-      line-height: 40px;
-      font-size: 1.2em;
-    }
+
     .v-symbol {
       border-color: red;
       color: white;
       background-color: red;
     }
+
     .c-symbol {
       border-color: green;
       color: white;
       background-color: green;
     }
-    .symbol-container {
-      margin-top: 10px;
-      display: flex;
-      justify-content: space-between;
+
+    .multi-letter-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 60px;
+      background-color: rgba(0, 0, 255, 0.1);
+      border: 2px solid blue;
+      cursor: move;
     }
-    .symbols-left, .legend-right {
-      display: inline-block;
-      vertical-align: top;
+
+    .resize-handle {
+      position: absolute;
+      right: -5px;
+      top: 0;
+      width: 10px;
+      height: 100%;
+      cursor: ew-resize;
+      background: rgba(0, 0, 0, 0.2);
     }
-    .symbols-left {
-      width: 65%;
-    }
-    .legend-right {
-      width: 30%;
-    }
-    #legend {
-      column-count: 2;
-      column-gap: 20px;
-    }
+
     #word-display {
       position: relative;
       height: 200px;
@@ -80,56 +95,57 @@
       border: 1px solid #ccc;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
+      align-items: flex-end;
       flex-wrap: wrap;
-      padding: 10px;
     }
-    .symbol-vertical {
-      width: 4px;
-      height: 100px;
-      background: black;
-      cursor: grab;
-    }
-    .symbol-breve, .symbol-macron {
-      font-size: 3em;
-      background: none;
-      border: none;
-      margin-bottom: 5px;
-    }
-    .multi-letter-wrapper {
-      border: 2px solid #000;
-      background-color: rgba(255, 255, 255, 0.6);
+
+    .above-letter, .below-letter {
       position: absolute;
-      resize: horizontal;
-      overflow: hidden;
-      height: 40px;
-      cursor: ew-resize;
-      min-width: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 3em;
+      pointer-events: none;
+    }
+
+    .above-letter {
+      top: -50px;
+    }
+
+    .below-letter {
+      bottom: -40px;
+    }
+
+    #legend {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <h1>Syllable Mapper</h1>
-  <input id="word-input" type="text" placeholder="Type a word here...">
-  <button onclick="resetSymbols(); renderWord();">Reset</button>
-  <div id="word-display" ondragover="allowDrop(event)" ondrop="dropAnywhere(event)"></div>
+  <input id="word-input" type="text" placeholder="Type a word here..." />
+  <button onclick="resetSymbols()">Reset</button>
+
+  <div id="word-display"></div>
+
   <div class="symbol-container">
-    <div id="symbols" class="symbols-left"></div>
-    <div id="legend" class="legend-right">
-      <h2>Legend</h2>
-      <ul>
-        <li><strong>V</strong>: Vowel</li>
-        <li><strong>C</strong>: Consonant</li>
-        <li><strong>˘</strong>: Breve</li>
-        <li><strong>¯</strong>: Macron</li>
-        <li><strong>|</strong>: Syllable splitter</li>
-        <li><strong>◯</strong>: Letter group (digraph, etc)</li>
-      </ul>
-    </div>
+    <div id="symbols"></div>
   </div>
+
+  <div id="legend">
+    <div><strong>V</strong>: Vowel</div>
+    <div><strong>C</strong>: Consonant</div>
+    <div><strong>˘</strong>: Breve (short vowel)</div>
+    <div><strong>¯</strong>: Macron (long vowel)</div>
+    <div><strong>|</strong>: Syllable splitter (pipe)</div>
+    <div><strong>▭</strong>: Group of letters (expandable)</div>
+  </div>
+
   <script>
-    let dragSymbol = null;
-    let activeSymbol = null;
+    let dragSymbol;
+    let currentResize = null;
 
     function allowDrop(event) {
       event.preventDefault();
@@ -137,81 +153,75 @@
 
     function drag(event) {
       dragSymbol = event.target.cloneNode(true);
-      dragSymbol.classList.remove('draggable');
-      dragSymbol.setAttribute('draggable', false);
     }
 
     function dropAnywhere(event) {
       event.preventDefault();
       if (!dragSymbol) return;
-      const symbol = dragSymbol.cloneNode(true);
+
       const display = document.getElementById("word-display");
-      const rect = display.getBoundingClientRect();
-      symbol.style.position = 'absolute';
+      const displayRect = display.getBoundingClientRect();
+      const x = event.clientX - displayRect.left;
+      const y = event.clientY - displayRect.top;
 
-      const x = event.clientX - rect.left;
-      const y = event.clientY - rect.top;
+      const symbol = dragSymbol.cloneNode(true);
+      symbol.style.position = "absolute";
+      symbol.style.left = x + "px";
+      symbol.style.top = y + "px";
+      symbol.style.cursor = "move";
 
-      symbol.style.cursor = 'move';
-      symbol.onmousedown = dragMove;
-
-      // Position adjustments
-      if (symbol.classList.contains('v-symbol') || symbol.classList.contains('c-symbol')) {
-        symbol.style.left = `${x - symbol.offsetWidth / 2}px`;
-        symbol.style.top = `${y - symbol.offsetHeight / 2}px`;
-      } else {
-        symbol.style.left = `${x - symbol.offsetWidth / 2}px`;
-        symbol.style.top = `${y - symbol.offsetHeight}px`;
+      if (symbol.id === 'symbol-rect') {
+        symbol.className = 'multi-letter-wrapper';
+        symbol.style.width = '60px';
+        const resizeHandle = document.createElement("div");
+        resizeHandle.className = "resize-handle";
+        resizeHandle.onmousedown = e => {
+          e.stopPropagation();
+          currentResize = { element: symbol, startX: e.clientX, startWidth: symbol.offsetWidth };
+        };
+        symbol.appendChild(resizeHandle);
       }
 
-      if (symbol.classList.contains('multi-letter-wrapper')) {
-        symbol.style.resize = 'horizontal';
-        symbol.style.height = '40px';
-        symbol.style.minWidth = '30px';
-      }
+      symbol.onmousedown = e => {
+        if (e.target.className === 'resize-handle') return;
+        const shiftX = e.clientX - symbol.getBoundingClientRect().left;
+        const shiftY = e.clientY - symbol.getBoundingClientRect().top;
+
+        function moveAt(pageX, pageY) {
+          symbol.style.left = pageX - displayRect.left - shiftX + 'px';
+          symbol.style.top = pageY - displayRect.top - shiftY + 'px';
+        }
+
+        function onMouseMove(event) {
+          moveAt(event.pageX, event.pageY);
+        }
+
+        document.addEventListener('mousemove', onMouseMove);
+        document.onmouseup = () => {
+          document.removeEventListener('mousemove', onMouseMove);
+          document.onmouseup = null;
+        };
+      };
 
       display.appendChild(symbol);
       dragSymbol = null;
-    }
-
-    function dragMove(e) {
-      e.preventDefault();
-      const el = e.target;
-      activeSymbol = el;
-      const shiftX = e.clientX - el.getBoundingClientRect().left;
-      const shiftY = e.clientY - el.getBoundingClientRect().top;
-
-      function moveAt(pageX, pageY) {
-        const containerRect = document.getElementById("word-display").getBoundingClientRect();
-        el.style.left = pageX - containerRect.left - shiftX + 'px';
-        el.style.top = pageY - containerRect.top - shiftY + 'px';
-      }
-
-      function onMouseMove(event) {
-        moveAt(event.pageX, event.pageY);
-      }
-
-      document.addEventListener('mousemove', onMouseMove);
-
-      el.onmouseup = function () {
-        document.removeEventListener('mousemove', onMouseMove);
-        el.onmouseup = null;
-        activeSymbol = null;
-      };
     }
 
     function renderWord() {
       const input = document.getElementById("word-input").value;
       const display = document.getElementById("word-display");
       display.innerHTML = "";
+
       for (let i = 0; i < input.length; i++) {
         const letter = input[i];
         const container = document.createElement("div");
         container.className = "letter-container";
-        const middle = document.createElement("div");
-        middle.className = "letter-display";
-        middle.textContent = letter;
-        container.appendChild(middle);
+
+        const letterEl = document.createElement("div");
+        letterEl.className = "letter-display";
+        letterEl.textContent = letter;
+
+        container.appendChild(letterEl);
         display.appendChild(container);
       }
     }
@@ -219,30 +229,46 @@
     function resetSymbols() {
       const symbolContainer = document.getElementById("symbols");
       symbolContainer.innerHTML = "";
+      document.getElementById("word-display").innerHTML = "";
+
       const symbols = [
         { id: 'symbol-v', text: 'V', className: 'v-symbol' },
         { id: 'symbol-c', text: 'C', className: 'c-symbol' },
-        { id: 'symbol-breve', text: '˘', className: 'symbol-breve' },
-        { id: 'symbol-macron', text: '¯', className: 'symbol-macron' },
-        { id: 'symbol-pipe', text: '|', className: 'symbol-vertical' },
-        { id: 'symbol-circle', text: '', className: 'multi-letter-wrapper' },
+        { id: 'symbol-breve', text: '˘' },
+        { id: 'symbol-macron', text: '¯' },
+        { id: 'symbol-rect', text: '▭' }
       ];
+
       for (let sym of symbols) {
         const el = document.createElement("div");
-        el.className = `draggable ${sym.className || ''}`.trim();
+        el.className = sym.className ? `draggable ${sym.className}` : "draggable";
         el.setAttribute("draggable", true);
         el.setAttribute("id", sym.id);
         el.textContent = sym.text;
         el.ondragstart = drag;
         symbolContainer.appendChild(el);
       }
-      document.getElementById("word-display").innerHTML = "";
     }
 
-    resetSymbols();
+    document.addEventListener("mousemove", function (e) {
+      if (currentResize) {
+        const delta = e.clientX - currentResize.startX;
+        currentResize.element.style.width = currentResize.startWidth + delta + "px";
+      }
+    });
+
+    document.addEventListener("mouseup", function () {
+      currentResize = null;
+    });
+
+    document.getElementById("word-display").addEventListener("dragover", allowDrop);
+    document.getElementById("word-display").addEventListener("drop", dropAnywhere);
+
     document.getElementById("word-input").addEventListener("keypress", function (e) {
       if (e.key === 'Enter') renderWord();
     });
+
+    resetSymbols();
   </script>
 </body>
 </html>
