--- a/index.html
+++ b/index.html
@@ -51,19 +51,18 @@
       padding: 10px;
       font-weight: bold;
       cursor: grab;
-      background: #f9f9f9;
-      border: 2px solid #000;
       user-select: none;
+      font-size: 2em;
     }
 
     .v-symbol {
-      border-color: red;
+      border: 2px solid red;
       color: white;
       background-color: red;
     }
 
     .c-symbol {
-      border-color: green;
+      border: 2px solid green;
       color: white;
       background-color: green;
     }
@@ -90,7 +89,7 @@
 
     #word-display {
       position: relative;
-      height: 200px;
+      height: 280px;
       margin-bottom: 10px;
       border: 1px solid #ccc;
       display: flex;
@@ -108,11 +107,11 @@
     }
 
     .above-letter {
-      top: -50px;
+      top: -60px;
     }
 
     .below-letter {
-      bottom: -40px;
+      bottom: -60px;
     }
 
     #legend {
