--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       margin: 0 10px;
       width: 60px;
       position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .letter-display {
