--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       border: 1px solid #ccc;
       display: flex;
       justify-content: center;
-      align-items: flex-end;
+      align-items: center;
       flex-wrap: wrap;
     }
 
@@ -214,6 +214,12 @@
       const display = document.getElementById("word-display");
       display.innerHTML = "";
 
+      const wordContainer = document.createElement("div");
+      wordContainer.style.display = "flex";
+      wordContainer.style.justifyContent = "center";
+      wordContainer.style.alignItems = "center";
+      wordContainer.style.flexWrap = "wrap";
+
       for (let i = 0; i < input.length; i++) {
         const letter = input[i];
         const container = document.createElement("div");
@@ -224,8 +230,10 @@
         letterEl.textContent = letter;
 
         container.appendChild(letterEl);
-        display.appendChild(container);
+        wordContainer.appendChild(container);
       }
+
+      display.appendChild(wordContainer);
     }
 
     function resetSymbols() {
